--- a/page2.html
+++ b/page2.html
@@ -50,15 +50,16 @@
         </h2>
         <table>
             <tr class = "toc">
-                <td> </td>  <!-- filler for checkbox column -->
-                <td> </td>  <!-- filler for image column-->
-                <td>Title</td>
-                <td>Artist</td>
-                <td>Year</td>
-                <td>Genre</td>
-                <td>Actions</td>
+                <td class = "sub"> </td>  <!-- filler for checkbox column -->
+                <td class = "sub"> </td>  <!-- filler for image column-->
+                <td class = "sub">Title</td>
+                <td class = "sub">Artist</td>
+                <td class = "sub">Year</td>
+                <td class = "sub">Genre</td>
+                <td class = "sub">Actions</td>
+
             </tr>
-            <tr>
+            <tr class = "bordered">
                 <td>
                         <input type="checkbox" name = "index[]" value="0" />
                     </td>
@@ -88,9 +89,10 @@
                             <img src="images/delete.png" width="20" height="20">
                         </button>
                 </td>
+                
             </tr>
-
-            <tr>
+        
+            <tr class = "bordered">
                 <td>
                         <input type="checkbox" name = "index[]" value="1" />
                     </td>
@@ -121,7 +123,7 @@
                         </button>
                 </td>
             </tr>
-            <tr>
+            <tr class = "bordered">
                 <td>
                         <input type="checkbox" name = "index[]" value="2" />
                     </td>
